--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,20 +10,20 @@ body:has(.scroll-block) {
   overflow-y: hidden;
 }
 
-body:-webkit-scrollbar,
-.scrollbar:-webkit-scrollbar {
+body::-webkit-scrollbar,
+.scrollbar::-webkit-scrollbar {
   width: 0.8rem;
 }
 
-body:-webkit-scrollbar-thumb,
-.scrollbar:-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,
+.scrollbar::-webkit-scrollbar-thumb {
   cursor: pointer;
   border-radius: 2rem;
   @apply bg-app-dark-primary;
 }
 
-body:-webkit-scrollbar-track,
-.scrollbar:-webkit-scrollbar-track {
+body::-webkit-scrollbar-track,
+.scrollbar::-webkit-scrollbar-track {
   border-radius: 2rem;
-  @apply bg-app-red-primary;
+  @apply bg-app-gray-primary;
 }
