add: checkServerHealth route and its Provider fix: quil styled on p tags including anchor element

--- a/src/styles/quill.css
+++ b/src/styles/quill.css
@@ -24,6 +24,8 @@
 }
 
 .quill ul,
+.quill ol,
+.quill ol > *,
 .quill ul > * {
   font-size: 18px !important;
 }
@@ -43,6 +45,12 @@
 .quill p {
   line-height: 1.5;
   letter-spacing: 0.5px;
+}
+
+.quill,
+.quill p:has(a) {
+  line-height: 1;
+  padding: 5px 0px !important;
 }
 
 .quill h1 {
@@ -119,7 +127,6 @@
   overflow-x: auto !important;
   position: relative;
   font-size: 16px;
-  z-index: 1 !important;
 }
 
 .quill .copy-btn {
@@ -137,7 +144,7 @@
   justify-content: center;
 }
 
-.ql-editor.ql-for-code > *:is(p, img, ul, iframe) {
+.ql-editor.ql-for-code > *:is(p, img, ul, ol, iframe) {
   display: none !important;
 }
 
